Changelog
=========

1.4 (unreleased)
----------------

- Manage multiple filestorage (zodbactvity, zopecache plugins) [mauro]

1.3.1 (2012-03-15)
------------------
- Fixed egg build: was missing ZCML & docs [mitchellrj]

1.3 (2012-03-08)
----------------
* z3c.autoinclude with plone target [mamico]
* Make use of shared secret for authentication [mamico]

1.2 - 2011/04/28
----------------
* Remove threadframe dependency on python >= 2.5 [amleczko]

1.1 - 2010/02/25
----------------

* Change restrictedTraverse to unrestrictedTraverse in data fetching.
  [amleczko]


1.1a1 - 2009/08/13
------------------

* Change the package name to munin.zope [amleczko]


1.0a2 - 2009/07/27
------------------

* Fix dimension for memory usage plugin.
  [witsch]

* Add info about monitoring more than one instance, e.g. a ZEO setup.
  [witsch]

* Allow overriding the default prefix/suffix when setting up plugin links.
  [witsch]


1.0a1 - 2009/07/17
------------------

* Add script option to automatically setup symlinks for all available
  plugins in the munin plugin directory.
  [witsch]

* Add plugin to track zope's memory usage (only available on Linux).
  [witsch]

* Add logging of slow plugin execution as a safety net.
  [witsch]

* Allow setting of necessary configuration values directly in buildout.
  [witsch]

* Refactor and try to simplify things.
  [witsch]


0.0.3 - 2009/03/30
------------------

* Add documentation.
  [amleczko]

* Refactor plugin registration.
  [amleczko]


0.0.2 - 2009/03/26
------------------

* Small refactoring.
  [amleczko]


0.0.1 - 2009/03/24
------------------

* Initial release.
  [amleczko]
