@@ -1,0 +1,29 @@
+[buildout]
+extends =
+            http://svn.plone.org/svn/collective/buildout/plonetest/test-4.2.x.cfg
+
+package-name = munin.zope
+package-extras = [test]
+test-eggs = Pillow
+versions = versions
+
+parts +=
+    munin
+
+[test]
+defaults = ['-s', '${buildout:package-name}', '--auto-color', '--auto-progress']
+
+[instance]
+http-address = 8080
+
+[versions]
+zc.buildout = 1.5.2
+distribute = 0.6.27
+
+parts +=
+    munin
+
+[munin]
+recipe = zc.recipe.egg
+eggs = munin.zope
+arguments = http_address=${instance:http-address}, user='${instance:user}'
