@@ -4,6 +4,10 @@ Changelog
 1.4 (unreleased)
 ----------------
 
+- Added testrunner for Plone 4.2 [fredvd]
+
+- updated bootstrap.py for distribute compat. [fredvd]
+
 - Manage multiple filestorage (zodbactvity, zopecache plugins) [mauro]
 
 1.3.1 (2012-03-15)
